# deepfilter-vst

./: .gitignore  Cargo.toml  README.md  RELEASE.md  build-release.sh  bundler.toml  test-release.sh  test.py
.cargo/: config.toml
.github/workflows/: manual-release.yml  release.yml
peaks/: Caravan Palace - Portobello (Official Audio) [nJTtYiphfHk].webm.reapeaks
src/: lib.rs  main.rs  thread.rs
src/model/: df_dec.onnx  enc.onnx  erb_dec.onnx
