[package]
name = "vst-filter"
version = "0.1.0"
edition = "2021"
authors = ["vaisest <your@email.com>"]
license = "GPL-3.0-or-later"
homepage = "stupid meme"
description = "A short description of your plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
deep_filter = { git = "https://github.com/Rikorose/DeepFilterNet.git", default-features = false, features = [
    "tract",
    "use-jemalloc",
    "default-model-ll",
] }
ndarray = "0.15.6"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }
once_cell = "1.19.0"
rtrb = "0.3.0"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
