[package]
name = "deepfilter-vst"
version = "0.1.0"
edition = "2021"
authors = ["vaisest <your@email.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/edsonsantoro/deepfilter-vst"
description = "A VST3/CLAP audio plugin that uses DeepFilter neural networks for real-time noise reduction"
repository = "https://github.com/edsonsantoro/deepfilter-vst"
keywords = ["vst", "clap", "audio", "noise-reduction", "deepfilter"]
categories = ["multimedia::audio"]

[workspace]
members = ["xtask"]

[[bin]]
name = "vst_standalone"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# fork due to dependency version issues
deep_filter = { git = "https://github.com/vaisest/DeepFilterNet.git", default-features = false, features = [
    "tract",
    # there are two models available. The regular one and an "LL" (presumably
    # low latency) version which does not have lookahead, but has less latency
    # The LL version would seem like a smart choice to use here, but it seems to
    # be about twice as slow

    # TODO: add as feature
    "default-model",
] }
ndarray = "^0.15"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
    "standalone",
] }
rtrb = "^0.3.0"
rubato = "^0.15.0"

[profile.release]
lto = "thin"
strip = "symbols"
